# supreme-waffle

./: .gitignore  BUILD.md  CMakeLists.txt  COMPILEME.md  loc.sh  run  run.sh
.zed/: debug.json  tasks.json
assets/canvas/: entry.canvas
assets/scene/: entry.scene
assets/ui/: entry.ui
common/: CMakeLists.txt
common/headers/common/: cursor_modes.h  errors.h  keycodes.h  string_utils.h
common/src/: string_utils.c
engine/: CMakeLists.txt
engine/headers/engine/: area.h  canvas.h  errors.h  event_queue.h  font.h  game_loop.h  handle_input.h  input_data.h  loop.h  measure_time.h  memory.h  memory_allocations.h  memory_arena.h  memory_pool.h  print.h  resource_indexers.h  scene.h  static_resources.h  string_utils.h  text_rendering.h  typedefs.h  ui.h  window.h  window_data.h
engine/headers/engine/platform/: crossplatform_alloca.h  file_io.h  game_loop.h  graphics.h  input.h  input_data.h  measure_time.h  memory_allocations.h  shader.h  window_data.h
engine/headers/internal/: print.h
engine/libs/src/cJSON/: cJSON.c
engine/libs/src/cglm/: CMakeLists.txt
engine/src/: area.c  canvas.c  event_queue.c  font.c  handle_input.c  input.c  loop.c  main.c  measure_time.c  memory_arena.c  memory_pool.c  memory_region_capacities.c  print.c  resource_indexer.c  scene.c  static_resources.c  static_resources_constants.c  string_utils.c  text_rendering.c  ui.c  window.c
engine/src/measure_time/: measure_time_linux.c  measure_time_windows.c
engine/src/memory/: memory_linux.c  memory_windows.c
engine/src/platform/file_io/: file_io_libc.c  file_io_linux.c  file_io_windows.c
engine/src/platform/game_loop/: game_loop_glfw.c
engine/src/platform/graphics/: graphics_glad.c
engine/src/platform/input/: input_glfw.c
engine/src/platform/measure_time/: measure_time_linux.c  measure_time_windows.c
engine/src/platform/memory/: memory_linux.c  memory_windows.c
engine/src/platform/shader/: shader_glad.c
engine/src/platform/window/: window_glfw.c
engine/src/shaders/: font.frag  font.vert  render_text.vert
game/: CMakeLists.txt
game/headers/game/: input_functions.h
game/headers/internal/: game_loop.h  input_data.h  window_data.h
game/src/: game_loop.c  input_functions.c  main.c  memory_pool.c
platform/: CMakeLists.txt
platform/headers/export/platform/: collect_input.h  file_io.h  graphics.h  measure_time.h  memory_allocations.h  shader.h  window.h
platform/src/collect_input/: collect_input_glfw.c
platform/src/file_io/: file_io_linux.c  file_io_windows.c
platform/src/game_loop/: game_loop_glfw.c
platform/src/graphics/: graphics_glad.c
platform/src/measure_time/: measure_time_linux.c  measure_time_windows.c
platform/src/memory/: memory_linux.c
platform/src/shader/: shader_glad.c
platform/src/window/: window_glfw.c
playground/src/: game_loop.c  main.c
tests/: CMakeLists.txt
tests/cmocka/: CompilerChecks.cmake  compile_commands.json
tests/cmocka/example/: calculator.c  output_override_test.c  set_errno.c
tests/cmocka/example/mock/uptime/: uptime.c
tests/cmocka/src/: cmocka.c
tests/cmocka/tests/: test_alloc.c  test_assert_set.c  test_returns.c  test_returns_fail.c  test_set_errno_fail.c  test_set_parameter.c  test_set_parameter_fail.c
tests/src/: main.c  memory_arena_tests.c
utils/: CMakeLists.txt
utils/bdf_converter/: CMakeLists.txt  run
utils/bdf_converter/headers/bdf_converter/: errors.h  string_utils.h  typedefs.h
utils/bdf_converter/libs/src/stb/: stb_image_write.c
utils/bdf_converter/src/: main.c  string_utils.c
